# lg-ollama

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Getting-Started/: 01_langgraph_start.ipynb  02_Conditional Routing.ipynb  03_React_Agent_ToolCall.ipynb  04_Agentic_memory_streaming.ipynb  Starting.ipynb  humra_tools.py
lg-agents-3.5hrs/: 00_TypeDict.ipynb  01_basics.ipynb  02_tool_calling.ipynb  03_Agent_basics.ipynb
