[project]
name = "lg-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.4",
    "langsmith>=0.4.58",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
